make smoke tests Java 8 compatible (#3187)
* make smoke tests Java 8 compatible